--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^1.2.1",
     "react-uuid": "^1.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
